--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Efe Enahoro| CSE 121B | BYU-Idaho</h1>
-    <h2>Lagos Nigeria</h2>
+    <h2>Lagos, Nigeria</h2>
     <hr>
 </body>
 </html>
