--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <title>Efe Enahoro| CSE 121B | BYU-Idaho</title>
 </head>
 <body>
-    <h1>Efe Enahoro| CSE 121B | BYU-Idaho</h1>
+    <h1>Efe Enahoro, CSE 121B, BYU-Idaho</h1>
     <h2>Lagos, Nigeria</h2>
     <hr>
 </body>
