Debugging js file

--- a/debugging.html
+++ b/debugging.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Efe Enahoro| CSE 121B | BYU-Idaho</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Efe Enahoro, CSE 121B, BYU-Idaho</h1>
-    <h2>Efe Enahoro</h2>
-    <hr>
+    <script src="debugging.js"></script>
 </body>
 </html>
