--- a/w01-task.html
+++ b/w01-task.html
@@ -9,5 +9,6 @@
     <h1>Efe Enahoro, CSE 121B, BYU-Idaho</h1>
     <h2>Efe Enahoro</h2>
     <hr>
+    <script src="w01-task.js"></script>
 </body>
 </html>
